Overflow ovelap problem solved

--- a/src/components/Jumbotron/index.scss
+++ b/src/components/Jumbotron/index.scss
@@ -29,6 +29,7 @@
     position: relative;
     min-height: $header-min-height;
     background-color: $licorice;
+    overflow: hidden;
     .header-image{
 
         background-color: $licorice;
@@ -87,17 +88,23 @@
     @include centerer;
     z-index: 2;
     text-align: center;
-    height: 65%;
-    margin-top: 10%;
+    align-content: center;
+    display: flex;
+    flex-direction: column;
+    height: 50%;
+    width: 50%;
+    top: 60%;
 
     img {
         max-height:90%;
-        max-width: 100%;
+        max-width: 50%;
+        align-self: center;
         user-select: none;
         -moz-user-select: none;
         -webkit-user-drag: none;
         -webkit-user-select: none;
         -ms-user-select: none;
+        
     }
 
     p{
@@ -112,8 +119,10 @@
 }
 
 .logo-container.fixed{
-    height: 45%;
+    height: 50%;
+    width: unset;
     margin-top: -3em;
+
 }
 
 
@@ -125,10 +134,10 @@
     }
 }
 
-@media screen and (max-width: $breakpoint-mobile) {
+
+@media screen and (max-width: $breakpoint-mobile-flipped) {
 
     .logo-container{
-        margin-top: 15%;
         p{
             margin-top: 0px;
             margin-bottom: 0px;
@@ -137,7 +146,7 @@
     }
 }
 
-@media screen and (max-width: $breakpoint-mobile-flipped) {
+@media screen and (max-width: $breakpoint-mobile) {
 
     .logo-container{
         p{
